紅利桃子 - 更新圖文

--- a/iiot/peach/business.html
+++ b/iiot/peach/business.html
@@ -128,6 +128,9 @@
                             <div>
                                 <img src="images/0630/img-join-business-01.jpg" width="100%" alt="如何申請成為點數特約店家？使用手機電話註冊">
                             </div>
+                            <div>
+                                <img src="images/img-join-business-01-1.jpg" width="100%" alt="如何申請成為點數特約店家？使用LINE連動註冊">
+                            </div>
                             <div style="padding-top:10px;">
                                 <img src="images/0629/img-join-business-02.jpg" width="100%" alt="如何申請成為點數特約店家？">
                             </div>
