--- a/iiot/peach/faq.html
+++ b/iiot/peach/faq.html
@@ -106,10 +106,10 @@
                                 <span class="bg-pink">將紅利桃子加到手機主畫面</span>
                             </h3>
                             <div>
-                                <img src="images/img-faq-a-01.jpg" width="100%">
+                                <img src="images/0701/img-faq-a-01.jpg" width="100%" alt="將紅利桃子加到手機主畫面 - iOS版">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-faq-a-02.jpg" width="100%">
+                                <img src="images/0701/img-faq-a-02.jpg" width="100%" alt="將紅利桃子加到手機主畫面 - 安卓版">
                             </div>
                         </div>
                     </div>
@@ -119,38 +119,35 @@
                                 <span class="bg-pink">允許取用相機</span>
                             </h3>
                             <div>
-                                <img src="images/img-faq-b-01.jpg" width="100%">
+                                <img src="images/0701/img-faq-b-01.jpg" width="100%" alt="允許取用相機 - iOS版">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-faq-b-02.jpg" width="100%">
-                            </div>
-                            <div style="padding-top:10px;">
-                                <img src="images/img-faq-b-03.jpg" width="100%">
+                                <img src="images/0701/img-faq-b-02.jpg" width="100%" alt="允許取用相機 - 安卓版">
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="main-introductio">
                             <h3 class="sub-title">
-                                <span class="bg-pink">無法取得有異常</span>
+                                <span class="bg-pink">點數餘額資訊異常或沒更新</span>
                             </h3>
                             <div>
-                                <img src="images/img-faq-c-01.jpg" width="100%">
+                                <img src="images/0701/img-faq-c-01.jpg" width="100%" alt="點數餘額資訊異常或沒更新">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-faq-c-02.jpg" width="100%">
+                                <img src="images/0701/img-faq-c-02.jpg" width="100%" alt="點數餘額資訊異常或沒更新">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-faq-c-03.jpg" width="100%">
+                                <img src="images/0701/img-faq-c-03.jpg" width="100%" alt="點數餘額資訊異常或沒更新">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-faq-c-04.jpg" width="100%">
+                                <img src="images/0701/img-faq-c-04.jpg" width="100%" alt="點數餘額資訊異常或沒更新">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-faq-c-05.jpg" width="100%">
+                                <img src="images/0701/img-faq-c-05.jpg" width="100%" alt="點數餘額資訊異常或沒更新">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/img-faq-c-06.jpg" width="100%">
+                                <img src="images/0701/img-faq-c-06.jpg" width="100%" alt="點數餘額資訊異常或沒更新">
                             </div>
                         </div>
                     </div>
