--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -130,7 +130,7 @@
                             <img src="images/img-join-03.jpg" width="100%" alt="紅利桃子怎麼拿？">
                         </div>
                         <div class="info">
-                            <h5>民眾可透過以下各種多元管道取得紅利桃子：</h5>
+                            <h5>振興活動期間，民眾可透過以下各種多元管道取得紅利桃子：</h5>
                             <ul class="list">
                                 <li>
                                     <p><span>問答給獎勵：</span>加入紅利桃子完成問答任務即享 50 點。</p>
