--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -130,7 +130,7 @@
                             <h4 class="hot-title pa-01">商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</h4>
                             <div class="info">
                                 <h5>活動簡介</h5>
-                                <p>桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。</p>
+                                <p>桃園市政府深化市民數位生活，引領數位新經濟，由資訊科技局全新打造的「市民卡紅利桃子」平台，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強在地振興將於7月15日起，結合各局處活動送出千萬元台幣等值的紅利桃子點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1點=1元），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。</p>
                             </div>
                             <div class="info">
                                 <h5>最新消息</h5>
@@ -168,7 +168,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card" id="goThe02">
                         <div>
                             <a class="a-an" href="https://lihi3.com/BYXkv" target="_blank">
                                 <img class="pc-show" src="images/img-event-hot.jpg" width="100%" alt="紅利桃子 - 加碼活動">
@@ -177,7 +177,7 @@
                         </div>
                     </div>
 
-                    <div class="card" id="goThe02">
+                    <div class="card">
                         <h3 class="sub-title">
                             <span class="bg-pink">桃園市各局處活動辦法</span>
                         </h3>
