--- a/iiot/peach/business.html
+++ b/iiot/peach/business.html
@@ -64,9 +64,9 @@
                 <li class="pushy-link">
                     <a href="/app/privacy">隱私權及安全政策</a>
                 </li>
-                <li class="pushy-link">
+                <!-- <li class="pushy-link">
                     <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
@@ -84,9 +84,9 @@
                     <li>
                         <a href="index.html">回首頁</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </header>
