--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -60,9 +60,9 @@
                 <li class="pushy-link">
                     <a href="/app/privacy">隱私權及安全政策</a>
                 </li>
-                <li class="pushy-link">
+                <!-- <li class="pushy-link">
                     <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
@@ -106,9 +106,9 @@
                     <li>
                         <a href="faq.html">常見問題</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </header>
