--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -6,9 +6,9 @@
     <title>紅利桃子 | 民眾專區 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
     <meta name='description'content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta name='keywords' content="數位桃園, 數位振興, 商家振興, 市民卡, 紅利桃子, 桃園市民, TTPUSH, 點數特約商店" />
-    <meta property="og:image" content="images/share-pic-0629.png" />
+    <meta property="og:image" content="https://point.tycg.gov.tw/images/share-pic-0704.jpg" />
     <meta property="og:title" content="紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
-    <meta property="og:url" content="#" />
+    <meta property="og:url" content="https://point.tycg.gov.tw" />
     <meta property="og:description" content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" sizes="57x57" href="https://taoyuan1000.tycg.gov.tw/images/icons/apple-icon-57x57.png">
@@ -95,7 +95,7 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <img src="images/main-banner-0629.png" title="桃園市民卡－千萬紅利桃子加倍贈" width="100%">
+                            <img src="images/main-banner-0704.jpg" title="桃園市民卡－1點 = 1元 千萬紅利桃子加倍贈" width="100%">
                         </div>
                     </div>
                 </section>
