紅利桃子 - 新增追蹤碼

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -31,8 +31,21 @@
     <script type="text/javascript" src="js/menu.js"></script>
     <!-- Pushy -->
     <link rel="stylesheet" href="mobilemenu/pushy.css">
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-TBZCW9V');</script>
+    <!-- End Google Tag Manager -->
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBZCW9V" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
    <div id="cookie-accept" class="cookie-accept">
         <span style="float: left; width: calc(100% - 30px);">為提供您更多優質的內容，本網站使用cookies分析技術。若繼續閱覽本網站內容，即表示您同意我們使用cookies，關於更多 cookies以及相關政策更新資訊，請閱讀我們的<a href="app/privacy" style="color: #ffda4e;">隱私權及安全政策</a>。</span>
         <div class="close" onclick="javascript: $('#cookie-accept').hide(); createCookie('cookieAccepted', '1', 365, '/');">✖️</div>
