紅利桃子 - 活動頁UI調整

--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -60,26 +60,26 @@
                     <a href="index.html">回首頁</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-01">最新消息</a>
+                    <a href="index.html#goThe01">最新消息</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-02">活動辦法</a>
+                    <a href="index.html#goThe02">活動辦法</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-03">民眾專區</a>
+                    <a href="point.html">民眾專區</a>
                 </li>
                 <li class="pushy-link">
                     <a href="business.html">業者專區</a>
                 </li>
                 <li class="pushy-link">
+                    <a href="https://lihi3.com/psG7v" target="_blank">申請加入特約商家</a>
+                </li>
+                <li class="pushy-link">
                     <a href="faq.html">常見問題</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/app/privacy">隱私權及安全政策</a>
+                    <a href="https://storage.googleapis.com/tycard_assets/tycard_line/privacy_tyc_dark.html">隱私權及安全政策</a>
                 </li>
-                <!-- <li class="pushy-link">
-                    <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                </li> -->
             </ul>
         </div>
     </nav>
@@ -94,12 +94,26 @@
             </a>
             <nav class="nav-menu">
                 <ul>
+                    <li class="dropdown">
+                        <a class="title">民眾專區</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="point.html#link01">如何加入紅利桃子</a>
+                            </li>
+                            <li>
+                                <a href="point.html#link02">紅利桃子怎麼拿?</a>
+                            </li>
+                            <li>
+                                <a href="point.html#link03">紅利桃子怎麼花?</a>
+                            </li>
+                            <li>
+                                <a href="business.html#link01">如何成為特約店家</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li>
                         <a href="index.html">回首頁</a>
                     </li>
-                    <!-- <li>
-                        <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                    </li> -->
                 </ul>
             </nav>
         </header>
