--- a/iiot/peach/faq.html
+++ b/iiot/peach/faq.html
@@ -60,26 +60,26 @@
                     <a href="index.html">回首頁</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-01">最新消息</a>
+                    <a href="index.html#goThe01">最新消息</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-02">活動辦法</a>
+                    <a href="index.html#goThe02">活動辦法</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-03">民眾專區</a>
+                    <a href="point.html">民眾專區</a>
                 </li>
                 <li class="pushy-link">
                     <a href="business.html">業者專區</a>
                 </li>
                 <li class="pushy-link">
+                    <a href="https://lihi3.com/psG7v" target="_blank">申請加入特約商家</a>
+                </li>
+                <li class="pushy-link">
                     <a href="faq.html">常見問題</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/app/privacy">隱私權及安全政策</a>
+                    <a href="https://storage.googleapis.com/tycard_assets/tycard_line/privacy_tyc_dark.html">隱私權及安全政策</a>
                 </li>
-                <!-- <li class="pushy-link">
-                    <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                </li> -->
             </ul>
         </div>
     </nav>
@@ -94,12 +94,23 @@
             </a>
             <nav class="nav-menu">
                 <ul>
+                    <li class="dropdown">
+                        <a class="title">常見問題</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="faq.html#link01">加到手機主畫面</a>
+                            </li>
+                            <li>
+                                <a href="faq.html#link02">允許取用相機</a>
+                            </li>
+                            <li>
+                                <a href="faq.html#link03">資訊異常或沒更新</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li>
                         <a href="index.html">回首頁</a>
                     </li>
-                    <!-- <li>
-                        <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                    </li> -->
                 </ul>
             </nav>
         </header>
@@ -126,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" id="link02">
                         <div class="main-introductio">
                             <h3 class="sub-title">
                                 <span class="bg-pink">允許取用相機</span>
@@ -139,7 +150,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" id="link03">
                         <div class="main-introductio">
                             <h3 class="sub-title">
                                 <span class="bg-pink">點數餘額資訊異常或沒更新</span>
