--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -62,20 +62,20 @@
                     <a class="go-section-02">活動辦法</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-03">民眾專區</a>
+                    <a href="point.html">民眾專區</a>
                 </li>
                 <li class="pushy-link">
                     <a href="business.html">業者專區</a>
                 </li>
                 <li class="pushy-link">
+                    <a href="https://lihi3.com/psG7v" target="_blank">申請加入特約商家</a>
+                </li>
+                <li class="pushy-link">
                     <a href="faq.html">常見問題</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/app/privacy">隱私權及安全政策</a>
+                    <a href="https://storage.googleapis.com/tycard_assets/tycard_line/privacy_tyc_dark.html">隱私權及安全政策</a>
                 </li>
-                <!-- <li class="pushy-link">
-                    <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                </li> -->
             </ul>
         </div>
     </nav>
@@ -96,32 +96,38 @@
                     <li class="go-section-02">
                         <a>活動辦法</a>
                     </li>
-                    <li class="go-section-03">
-                        <a>民眾專區</a>
+                    <!-- go-section-03 -->
+                    <li class="dropdown">
+                        <a class="title">民眾專區</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="point.html#link01">如何加入紅利桃子</a>
+                            </li>
+                            <li>
+                                <a href="point.html#link02">紅利桃子怎麼拿?</a>
+                            </li>
+                            <li>
+                                <a href="point.html#link03">紅利桃子怎麼花?</a>
+                            </li>
+                            <li>
+                                <a href="business.html#link01">如何成為特約店家</a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="dropdown">
                         <a class="title">業者專區</a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="business.html#link01">申請加入</a>
-                            </li>
-                            <!-- <li>
-                                <a href="business.html">自助專區</a>
+                                <a href="business.html#link01">如何加入特約店家</a>
                             </li>
                             <li>
-                                <a href="business.html">合約規範</a>
+                                <a href="https://lihi3.com/psG7v" target="_blank">申請加入特約商家</a>
                             </li>
-                            <li>
-                                <a href="business.html">核銷兌現</a>
-                            </li> -->
                         </ul>
                     </li>
                     <li>
                         <a href="faq.html">常見問題</a>
                     </li>
-                    <!-- <li>
-                        <a href="https://lihi3.com/BYXkv">前往紅利桃子</a>
-                    </li> -->
                 </ul>
             </nav>
         </header>
@@ -150,7 +156,7 @@
                                 <p>「點數特約商家」招募中，加入辦法請洽業者專區<br><a href="https://forms.gle/cjEuN9TL8Wtf9iga6" target="_blank">各場次線上招商說明會報名</a></p>
                                 <div class="slider-banner">
                                     <a href="https://lihi3.com/psG7v" target="_blank">
-                                        <img width="100%" src="images/btn-form.png" alt="「點數特約商家」招募中 （立即點我申請加入）">
+                                        <img width="100%" src="images/btn-form-0706.png" alt="「點數特約商家」招募中 （立即點我申請加入）">
                                     </a>
                                 </div>
                             </div>
@@ -165,16 +171,28 @@
                             <div class="how-box">
                                 <ul class="clearfix">
                                     <li>
-                                        <a href="point.html#link01"><img src="images/step1.png" alt="如何加入紅利桃子"></a>
+                                        <a href="point.html#link01">
+                                            <img src="images/step1.png" alt="如何加入紅利桃子">
+                                            <p>（看詳細說明）</p>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="point.html#link02"><img src="images/step2.png" alt="紅利桃子怎麼拿?"></a>
+                                        <a href="point.html#link02">
+                                            <img src="images/step2.png" alt="紅利桃子怎麼拿?">
+                                            <p>（看詳細說明）</p>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="point.html#link03"><img src="images/step3.png" alt="紅利桃子怎麼花?"></a>
+                                        <a href="point.html#link03">
+                                            <img src="images/step3.png" alt="紅利桃子怎麼花?">
+                                            <p>（看詳細說明）</p>
+                                        </a>
                                     </li>
                                     <li>
-                                        <a href="business.html#link01"><img src="images/step4.png" alt="如何成為特約店家"></a>
+                                        <a href="business.html#link01">
+                                            <img src="images/step4.png" alt="如何成為特約店家">
+                                            <p>（看詳細說明）</p>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
