紅利桃子 - 更新圖片
1.更新logo-桃園市政府資訊科技局
2.更新圖片-加入商家三步驟

--- a/iiot/peach/business.html
+++ b/iiot/peach/business.html
@@ -139,7 +139,7 @@
                                 <span class="bg-pink">點數特約店家、簡單三步驟</span>
                             </h3>
                             <div>
-                                <img src="images/img-join-business-00.jpg" width="100%">
+                                <img src="images/img-join-business-00-0706.jpg" width="100%" alt="點數特約店家、簡單三步驟">
                             </div>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                                     </li>
                                     <li>
                                         <a href="https://doit.tycg.gov.tw/" target="_blank">
-                                            <img src="images/Logo-Taoyuan-doit.png" alt="桃園市政府資訊科技局">
+                                            <img src="images/Logo-Taoyuan-doit-0706.png" alt="桃園市政府資訊科技局">
                                         </a>
                                     </li>
                                 </ul>
