紅利桃子 - 移除連結

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -201,9 +201,10 @@
 
                     <div class="card" id="goThe02">
                         <div>
-                            <a class="a-an" href="https://lihi3.com/BYXkv" target="_blank">
-                                <img class="pc-show" src="images/img-event-hot.jpg" width="100%" alt="紅利桃子 - 加碼活動">
-                                <img class="mob-show" src="images/img-event-hot-mob.jpg" width="100%" alt="紅利桃子 - 加碼活動">
+                            <!-- https://lihi3.com/BYXkv" -->
+                            <a class="a-an" style="cursor: initial;">
+                                <img class="pc-show" src="images/img-event-hot-0706.jpg" width="100%" alt="紅利桃子 - 加碼活動">
+                                <img class="mob-show" src="images/img-event-hot-mob-0706.jpg" width="100%" alt="紅利桃子 - 加碼活動">
                             </a>
                         </div>
                     </div>
