紅利桃子 - 更新 隱私權連結與新增內容頁面

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -47,7 +47,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBZCW9V" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
    <div id="cookie-accept" class="cookie-accept">
-        <span style="float: left; width: calc(100% - 30px);">為提供您更多優質的內容，本網站使用cookies分析技術。若繼續閱覽本網站內容，即表示您同意我們使用cookies，關於更多 cookies以及相關政策更新資訊，請閱讀我們的<a href="app/privacy" style="color: #ffda4e;">隱私權及安全政策</a>。</span>
+        <span style="float: left; width: calc(100% - 30px);">為提供您更多優質的內容，本網站使用cookies分析技術。若繼續閱覽本網站內容，即表示您同意我們使用cookies，關於更多 cookies以及相關政策更新資訊，請閱讀我們的<a href="privacy.html" style="color: #ffda4e;">隱私權及安全政策</a>。</span>
         <div class="close" onclick="javascript: $('#cookie-accept').hide(); createCookie('cookieAccepted', '1', 365, '/');">✖️</div>
     </div>
     <a class="gotop"><i class="fas fa-arrow-up"></i></a>
@@ -74,7 +74,7 @@
                     <a href="faq.html">常見問題</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="https://storage.googleapis.com/tycard_assets/tycard_line/privacy_tyc_dark.html">隱私權及安全政策</a>
+                    <a href="privacy.html">隱私權及安全政策</a>
                 </li>
             </ul>
         </div>
@@ -274,7 +274,7 @@
                     <a class="logo" href="#" target="_blank"></a>
                 </div>
                 <div class="r-box">
-                    <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="/app/privacy" target="_blank">隱私權及安全政策</a></p>
+                    <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="privacy.html" target="_blank">隱私權及安全政策</a></p>
                 </div>
             </footer>
         </section>
