--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -164,7 +164,7 @@
                                     <p><span>問答給獎勵：</span>加入紅利桃子完成問答任務即享 50 點。</p>
                                 </li>
                                 <li>
-                                    <p><span>消費回饋任務：</span>到點數特約商店使用 50 點以上，系統立即回饋點數 50 點。每人可到不重複的 2 個點數特約商店消費，最高可回饋2次，累計 100 點。</p>
+                                    <p><span>消費回饋任務：</span>到點數特約商店使用 50 點以上，系統立即回饋點數 50 點。每人可到不重複的 2 個點數特約商店消費，最高可回饋2次，累計 100 點。（數量有限，送完為止）</p>
                                 </li>
                                 <li>
                                     <p><span class="blue">加碼經發局活動：</span>參加桃園市經發局「你吃飯我買單2.0」，依照得獎者金額數字，資科局提供加倍紅利桃子。（經發局活動辦法詳見該活動官網）</p>
