紅利桃子 - 更新活動頁內容

--- a/iiot/peach/faq.html
+++ b/iiot/peach/faq.html
@@ -213,7 +213,7 @@
             </main>
             <footer class="foorer-content clearfix">
                 <div class="l-box">
-                    <a class="logo" href="#" target="_blank"></a>
+                    <a class="logo" href="index.html" target="_blank"></a>
                 </div>
                 <div class="r-box">
                     <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="privacy.html" target="_blank">隱私權及安全政策</a>
