--- a/iiot/peach/point.html
+++ b/iiot/peach/point.html
@@ -155,25 +155,25 @@
                             <span class="bg-pink">全民攻略 - 紅利桃子怎麼拿？</span>
                         </h3>
                         <div>
-                            <img src="images/img-join-03.jpg" width="100%" alt="紅利桃子怎麼拿？">
+                            <img src="images/0707/img-join-03.jpg" width="100%" alt="紅利桃子怎麼拿？">
                         </div>
                         <div class="info">
                             <h5>振興活動期間，民眾可透過以下各種多元管道取得紅利桃子：</h5>
                             <ul class="list">
                                 <li>
-                                    <p><span>問答給獎勵：</span>加入紅利桃子完成問答任務即享 50 點。</p>
+                                    <p><span>問答給獎勵：</span>加入紅利桃子完成問答任務即享 50 點<span class="c-red">（數量有限，送完為止）</span>。</p>
                                 </li>
                                 <li>
-                                    <p><span>消費回饋任務：</span>到點數特約商店使用 50 點以上，系統立即回饋點數 50 點。每人可到不重複的 2 個點數特約商店消費，最高可回饋2次，累計 100 點。（數量有限，送完為止）</p>
+                                    <p><span>消費回饋任務：</span>點數特約商店使用 50 點以上，系統立即回饋點數 50 點。每人可到不重複的 2 個點數特約商店消費，最高可回饋2次，累計 100 點<span class="c-red">（數量有限，送完為止）</span>。</p>
                                 </li>
                                 <li>
-                                    <p><span class="blue">加碼經發局活動：</span>參加桃園市經發局「你吃飯我買單2.0」，依照得獎者金額數字，資科局提供加倍紅利桃子。（經發局活動辦法詳見該活動官網）</p>
+                                    <p><span class="blue">加碼經發局活動：</span>加碼經發局活動：參加桃園市經發局「你吃飯我買單2.0」，依照得獎者金額數字，資科局提供加倍紅利桃子。（詳見該活動官網）</p>
                                 </li>
                                 <li>
-                                    <p><span class="blue">加碼觀旅局活動：</span>參加桃園市觀旅局「桃園千元住宿金搶先用」，依照得獎者金額數字，資科局提供 1,000 點紅利桃子。（觀旅局活動辦法詳見該活動官網）</p>
+                                    <p><span class="blue">加碼觀旅局活動：</span>加碼觀旅局活動：參加桃園市觀旅局「桃園千元住宿金搶先用」，依照得獎者金額數字，資科局提供 1,000 點紅利桃子。<span class="c-red">（限量2,000名，<a href="https://lovetystay.tycg.gov.tw/" target="_blank">詳見該活動官網</a>）</span></p>
                                 </li>
                                 <li>
-                                    <p><span class="blue">加碼農業局活動：</span>參加桃園市農業局「111年桃園市防疫有機蔬菜箱」，依照實際付款採購者之意願登記報名，資科局提供 30 點紅利桃子。（農業局活動辦法詳見該活動官網）</p>
+                                    <p><span class="blue">加碼農業局活動：</span>加碼農業局活動：參加桃園市農業局「111年桃園市防疫有機蔬菜箱」，依照實際付款採購者之意願登記報名，資科局提供 30 點紅利桃子。<span class="c-red">（限量8,000名，<a href="https://agriculture.tycg.gov.tw/home.jsp?id=255&parentpath=0,103&mcustomize=multimessage_view.jsp&dataserno=202206270024&aplistdn=ou=hotnews,ou=chinese,ou=ap_root,o=tycg,c=tw&toolsflag=Y" target="_blank">詳見該活動官網</a>）</span></p>
                                 </li>
                             </ul>
                         </div>
@@ -225,7 +225,7 @@
             </main>
             <footer class="foorer-content clearfix">
                 <div class="l-box">
-                    <a class="logo" href="#" target="_blank"></a>
+                    <a class="logo" href="index.html" target="_blank"></a>
                 </div>
                 <div class="r-box">
                     <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="privacy.html" target="_blank">隱私權及安全政策</a>
