--- a/iiot/peach/business.html
+++ b/iiot/peach/business.html
@@ -140,7 +140,7 @@
                                 <span class="bg-pink">點數特約店家、簡單三步驟</span>
                             </h3>
                             <div>
-                                <img src="images/img-join-business-00-0706.jpg" width="100%" alt="點數特約店家、簡單三步驟">
+                                <img src="images/0707/img-join-business-00.jpg" width="100%" alt="點數特約店家、簡單三步驟">
                             </div>
                         </div>
                     </div>
@@ -157,10 +157,13 @@
                                 <img src="images/img-join-business-01-1.jpg" width="100%" alt="如何申請成為點數特約店家？使用LINE連動註冊">
                             </div>
                             <div style="padding-top:10px;">
-                                <img src="images/0629/img-join-business-02.jpg" width="100%" alt="如何申請成為點數特約店家？">
+                                <img src="images/0707/img-join-business-02.jpg" width="100%" alt="如何申請成為點數特約店家？">
                             </div>
                             <div style="padding-top:10px;">
                                 <img src="images/0629/img-join-business-03.jpg" width="100%" alt="如何申請成為點數特約店家 - 省核通過後">
+                            </div>
+                            <div style="padding-top:10px;">
+                                <img src="images/0707/img-join-business-04.jpg" width="100%" alt="店家客服資訊">
                             </div>
                         </div>
                     </div>
@@ -201,7 +204,7 @@
             </main>
             <footer class="foorer-content clearfix">
                 <div class="l-box">
-                    <a class="logo" href="#" target="_blank"></a>
+                    <a class="logo" href="index.html" target="_blank"></a>
                 </div>
                 <div class="r-box">
                     <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="privacy.html" target="_blank">隱私權及安全政策</a>
