--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -236,7 +236,9 @@
                         <h3 class="sub-title">
                             <span class="bg-pink">紅利桃子可以去哪消費？</span>
                         </h3>
-                        <h4 class="hot-title">coming soon...</h4>
+                        <div>
+                            <img src="images/0707/shop-logos.jpg" width="100%" alt="紅利桃子可以去哪消費？">
+                        </div>
                     </div>
                     <div class="card">
                         <h3 class="sub-title">
@@ -304,7 +306,7 @@
             </main>
             <footer class="foorer-content clearfix">
                 <div class="l-box">
-                    <a class="logo" href="#" target="_blank"></a>
+                    <a class="logo" href="index.html" target="_blank"></a>
                 </div>
                 <div class="r-box">
                     <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="privacy.html" target="_blank">隱私權及安全政策</a></p>
