--- a/iiot/peach/privacy.html
+++ b/iiot/peach/privacy.html
@@ -141,7 +141,7 @@
             </main>
             <footer class="foorer-content clearfix">
                 <div class="l-box">
-                    <a class="logo" href="#" target="_blank"></a>
+                    <a class="logo" href="index.html" target="_blank"></a>
                 </div>
                 <div class="r-box">
                     <p>Copyrights Ⓒ 2022 All Rights Reserved.<span>　 |　</span><a href="privacy.html">隱私權及安全政策</a>
